--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "kartik-v/yii2-widget-select2": "dev-master",
         "kartik-v/yii2-widget-switchinput": "dev-master",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
-        "kartik-v/yii2-detail-view": "dev-master"
+        "kartik-v/yii2-detail-view": "dev-master",
+        "kartik-v/yii2-widget-fileinput": "dev-master",
+        "kartik-v/yii2-sortable-input": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
